[package]
name         = "esp-riscv-rt"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.60"
description  = "Minimal runtime / startup for RISC-V CPUs from Espressif"
repository   = "https://github.com/esp-rs/esp-riscv-rt"
license      = "MIT OR Apache-2.0"
keywords     = ["esp32", "riscv", "runtime", "startup"]
categories   = ["embedded", "no-std"]

[dependencies]
r0              = "1.0.0"
riscv           = "0.10.1"
riscv-rt-macros = "0.2.0"
critical-section = "1.1.1"
panic-rtt-target = { version = "0.1.2" }
rtt-target = { version = "0.4.0" }

[dev-dependencies]
panic-halt = "0.2.0"
