[package]
name         = "esp-riscv-rt"
version      = "0.3.0"
edition      = "2021"
rust-version = "1.60"
description  = "Minimal runtime / startup for RISC-V CPUs from Espressif"
repository   = "https://github.com/esp-rs/esp-riscv-rt"
license      = "MIT OR Apache-2.0"
keywords     = ["esp32", "riscv", "runtime", "startup"]
categories   = ["embedded", "no-std"]

[dependencies]
riscv           = {path = "/home/pawel/suckless/riscv"}
riscv-rt-macros = "0.2.0"

[dev-dependencies]
panic-halt = "0.2.0"

[features]
has-mie-mip = []
zero-bss = []
zero-rtc-fast-bss = []
init-data = []
init-rw-text = []
init-rtc-fast-data = []
init-rtc-fast-text = []
#i don't like this, if anyone has a better idea hmu
int_0 = []
int_1 = []
int_2 = []
int_3 = []
int_4 = []
int_5 = []
int_6 = []
int_7 = []
int_8 = []
int_9 = []
int_10 = []
int_11 = []
int_12 = []
int_13 = []
int_14 = []
int_15 = []
int_16 = []
int_17 = []
int_18 = []
int_19 = []
int_20 = []
int_21 = []
int_22 = []
int_23 = []
int_24 = []
int_25 = []
int_26 = []
int_27 = []
int_28 = []
int_29 = []
int_30 = []
int_31 = []

